# neural-critic

./: LICENSE  README.md  app.py  main.py  pyproject.toml
data_tools/: albums_random_evaluations.py  fetch_tracks.py  merge_album_data.py  musify_downloader.py
src/: __init__.py
src/embeddings/: __init__.py  clap_embed.py
src/regression/: model_fitting.py
src/regression/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
src/regression/catboost_info/learn/: events.out.tfevents
src/regression/catboost_info/test/: events.out.tfevents
src/utils/: model_saver.py
